Fixed navbar to be fixed Added team component Moved out button styling to parent

--- a/src/style/_theme.scss
+++ b/src/style/_theme.scss
@@ -11,3 +11,4 @@ $main-light-1: #ffffff; // Lightest
 $main-light-2: #ebebeb;
 $main-light-3: #d9d9d9;
 $main-light-4: #b1b1b1; // Darkest
+$main-light-5: #5e6b75;
