--- a/src/style/css/components/team.scss
+++ b/src/style/css/components/team.scss
@@ -3,9 +3,148 @@
 
 .team-container {
   display: flex;
-  flex-direction: row;
-
+  flex-direction: column;
+  align-items: end;
   width: 310px;
-  border-radius: 5px;
-  background: theme.$main-dark-2;
+  .team-head {
+    display: flex;
+    flex-direction: row;
+
+    width: 100%;
+    border-radius: 5px;
+    background: theme.$main-dark-2;
+
+    .edit-button {
+      border-radius: 0px;
+      border-right: 1px solid theme.$main-dark-1;
+    }
+
+    .remove-button {
+      border-radius: 5px 0 0 5px;
+      border-right: 1px solid theme.$main-dark-1;
+    }
+  }
+}
+
+.dropdown {
+  padding: 6px 8px;
+  background: theme.$main-dark-4;
+  border-radius: 0 0 5px 5px;
+
+  .dropdown-content {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+
+    .rows {
+      display: flex;
+      flex-direction: column;
+      gap: 4px;
+
+      .row {
+        display: flex;
+        gap: 6px;
+        .user {
+          width: 80px;
+          display: flex;
+          gap: 4px;
+          align-items: center;
+          justify-content: flex-end;
+
+          .crown {
+            width: 14px;
+            height: 14px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            .edit {
+              fill: none;
+              stroke: theme.$main-dark-2;
+            }
+
+            .leader {
+              fill: colors.$active;
+            }
+          }
+          .name {
+            font-size: 12px;
+            color: colors.$active;
+            font-weight: 600;
+          }
+        }
+
+        .characters {
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          .team-mate {
+            color: theme.$main-light-1;
+            font-size: 12px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            border-left: 1px solid theme.$main-dark-1;
+            padding: 1.5px 0 1.5px 4px;
+
+            .icons {
+              display: flex;
+              gap: 12px;
+              align-items: center;
+              .roles {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                gap: 3px;
+
+                .role {
+                  width: 12px;
+                  height: 12px;
+                  fill: theme.$main-light-1;
+                  cursor: pointer;
+
+                  &:hover {
+                    fill: colors.$active;
+                  }
+                }
+              }
+              .cross {
+                display: flex;
+                width: 8px;
+                height: 8px;
+                justify-content: center;
+                align-items: center;
+                cursor: pointer;
+
+                &:hover {
+                  color: colors.$red;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+    .add-panel {
+      display: flex;
+
+      .username {
+        border-radius: 5px 0 0 5px;
+        width: 86px;
+        text-align: right;
+
+        &::placeholder {
+          font-weight: 600;
+        }
+      }
+
+      .right {
+        width: 100%;
+      }
+    }
+  }
+}
+
+.team-mate {
 }
