Team component styling done.

--- a/src/style/css/components/button.scss
+++ b/src/style/css/components/button.scss
@@ -12,9 +12,9 @@
 
   .icon {
     display: flex;
+    width: 14px;
+    height: 14px;
     font-size: 14px;
-    //width: 14px;
-    //height: 14px;
     color: theme.$main-light-1;
   }
 
