--- a/src/style/css/components/select.scss
+++ b/src/style/css/components/select.scss
@@ -7,7 +7,7 @@
   justify-content: space-between;
   margin-left: 5px;
   margin-right: 7px;
-  width: 100%;
+  min-width: 120px;
   font-size: 13px;
   cursor: pointer;
 
@@ -33,6 +33,9 @@
       height: 15px;
       font-size: 15px;
       color: theme.$main-light-1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
