--- a/src/style/css/components/team.scss
+++ b/src/style/css/components/team.scss
@@ -4,8 +4,8 @@
 .team-container {
   display: flex;
   flex-direction: column;
-  align-items: end;
-  width: 310px;
+  align-items: flex-end;
+  width: 374px;
   .team-head {
     display: flex;
     flex-direction: row;
@@ -23,6 +23,13 @@
       border-radius: 5px 0 0 5px;
       border-right: 1px solid theme.$main-dark-1;
     }
+
+    .expanded {
+    }
+
+    .select {
+      flex-grow: 1;
+    }
   }
 }
 
@@ -30,6 +37,8 @@
   padding: 6px 8px;
   background: theme.$main-dark-4;
   border-radius: 0 0 5px 5px;
+  width: 100%;
+  box-sizing: border-box;
 
   .dropdown-content {
     display: flex;
@@ -40,6 +49,7 @@
       display: flex;
       flex-direction: column;
       gap: 4px;
+      padding-right: 6px;
 
       .row {
         display: flex;
@@ -50,6 +60,7 @@
           gap: 4px;
           align-items: center;
           justify-content: flex-end;
+          box-sizing: border-box;
 
           .crown {
             width: 14px;
@@ -77,37 +88,22 @@
         .characters {
           display: flex;
           flex-direction: column;
-          width: 100%;
+          flex-grow: 1;
+          border-left: 1px solid colors.$active;
+
           .team-mate {
             color: theme.$main-light-1;
             font-size: 12px;
             display: flex;
             justify-content: space-between;
             align-items: center;
-            border-left: 1px solid theme.$main-dark-1;
+
             padding: 1.5px 0 1.5px 4px;
 
             .icons {
               display: flex;
               gap: 12px;
               align-items: center;
-              .roles {
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 3px;
-
-                .role {
-                  width: 12px;
-                  height: 12px;
-                  fill: theme.$main-light-1;
-                  cursor: pointer;
-
-                  &:hover {
-                    fill: colors.$active;
-                  }
-                }
-              }
               .cross {
                 display: flex;
                 width: 8px;
@@ -131,8 +127,10 @@
 
       .username {
         border-radius: 5px 0 0 5px;
+        padding: 2px 6px 2px 4px;
         width: 86px;
         text-align: right;
+        box-sizing: border-box;
 
         &::placeholder {
           font-weight: 600;
@@ -140,7 +138,47 @@
       }
 
       .right {
-        width: 100%;
+        border-left: 1px solid theme.$main-dark-1;
+        flex-grow: 1;
+        display: flex;
+
+        .character {
+          flex-grow: 1;
+          border-radius: 0;
+        }
+        .buttons {
+          display: flex;
+
+          .roles {
+            padding: 0 6px;
+            background-color: theme.$main-dark-2;
+            border-right: 1px solid theme.$main-dark-1;
+            border-left: 1px solid theme.$main-dark-1;
+          }
+
+          .add {
+            padding: 0 3px;
+            border-radius: 0 5px 5px 0;
+          }
+        }
+      }
+    }
+
+    .roles {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 3px;
+
+      .role {
+        width: 12px;
+        height: 12px;
+        fill: theme.$main-light-1;
+        cursor: pointer;
+
+        &:hover {
+          fill: colors.$active;
+        }
       }
     }
   }
