--- a/src/style/css/pages/teams.scss
+++ b/src/style/css/pages/teams.scss
@@ -1,7 +1,7 @@
 .teams {
   display: flex;
+  flex-direction: column;
   align-items: center;
-  width: max-content;
 
   .teams-container {
     display: flex;
@@ -13,6 +13,7 @@
     width: 100%;
     display: flex;
     .team-name {
+      display: flex;
     }
     .select {
       flex-grow: 1;
