--- a/src/style/css/components/select.scss
+++ b/src/style/css/components/select.scss
@@ -1,27 +1,30 @@
 @use "../../theme" as theme;
 @use "../../colors" as colors;
+
 .select {
   color: theme.$main-light-1;
   font-size: 12px;
+  position: relative;
 
   .header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-
-    width: 203px;
     font-size: 13px;
     padding: 2px 7px;
+    flex-grow: 1;
     cursor: pointer;
     background-color: theme.$main-dark-2;
 
     .selected {
       color: colors.$active;
     }
+
     .placeholder {
       color: theme.$main-light-5;
     }
+
     .arrow {
       width: 15px;
       height: 15px;
@@ -32,6 +35,7 @@
       align-items: center;
     }
   }
+
   .items {
     display: flex;
     flex-direction: column;
@@ -41,6 +45,8 @@
     border-radius: 0 0 5px 5px;
     padding-top: 5px;
     padding-bottom: 5px;
+    right: 0;
+    top: 24px;
 
     .item {
       padding: 3px 10px 4px 3px;
