--- a/src/style/css/pages/teams.scss
+++ b/src/style/css/pages/teams.scss
@@ -8,6 +8,13 @@
   width: 374px;
   gap: 11px;
 
+  .title {
+    color: theme.$main-light-1;
+    font-size: 16px;
+    padding-bottom: 65px;
+    text-align: center;
+  }
+
   .teams-container {
     display: flex;
     flex-direction: column;
