--- a/src/style/css/tabs/characters.scss
+++ b/src/style/css/tabs/characters.scss
@@ -108,6 +108,7 @@
           width: 8px;
           height: 8px;
           font-size: 8px;
+          cursor: pointer;
 
           &:hover {
             color: colors.$red;
