--- a/src/style/css/components/button.scss
+++ b/src/style/css/components/button.scss
@@ -12,8 +12,8 @@
 
   .icon {
     display: flex;
-    width: 14px;
-    height: 14px;
+    justify-content: center;
+    align-items: center;
     font-size: 14px;
     color: theme.$main-light-1;
   }
