Icon styling to KeyBanner

--- a/src/style/css/components/keybanner.scss
+++ b/src/style/css/components/keybanner.scss
@@ -50,4 +50,14 @@
       }
     }
   }
+
+  .name {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    .icon {
+      rotate: -30deg;
+      font-size: 12px;
+    }
+  }
 }
