Pointer for highlights

--- a/src/style/css/pages/listManager.scss
+++ b/src/style/css/pages/listManager.scss
@@ -57,6 +57,7 @@
       .highlight {
         font-weight: 600;
         color: colors.$blue;
+        cursor: pointer;
       }
     }
     .first-label {
