--- a/src/style/css/pages/auth.scss
+++ b/src/style/css/pages/auth.scss
@@ -7,10 +7,17 @@
   align-content: center;
   flex-direction: column;
 
+  .error-box {
+    text-align: center;
+    padding-bottom: 10px;
+    font-size: 12px;
+    color: theme.$main-light-3;
+  }
+
   .title {
     color: theme.$main-light-1;
     font-size: 16px;
-    padding-bottom: 65px;
+    padding-bottom: 45px;
     text-align: center;
   }
 
