--- a/src/style/css/components/select.scss
+++ b/src/style/css/components/select.scss
@@ -36,6 +36,17 @@
       justify-content: center;
       align-items: center;
     }
+
+    .item-header {
+      display: flex;
+      gap: 7px;
+      align-items: center;
+      img {
+        width: 14px;
+        height: 14px;
+        border-radius: 2px;
+      }
+    }
   }
 
   .items {
@@ -50,10 +61,26 @@
     right: 0;
     top: 24px;
     z-index: 1;
+    max-height: 200px;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      display: none;
+    }
 
     .item {
       padding: 3px 10px 4px 3px;
       cursor: pointer;
+      display: flex;
+      gap: 7px;
+      align-items: center;
+
+      img {
+        width: 14px;
+        height: 14px;
+        margin-left: 5px;
+        border-radius: 2px;
+      }
     }
 
     .selected {
