--- a/src/style/css/pages/listMythic.scss
+++ b/src/style/css/pages/listMythic.scss
@@ -60,6 +60,13 @@
     margin-top: 12px;
     display: flex;
     gap: 8px;
+    .item-select {
+      .items {
+        top: 28px;
+        border-radius: 5px;
+        border: 2px solid theme.$main-dark-4;
+      }
+    }
   }
 
   .gear-part-wrapper {
