--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -11,6 +11,13 @@
     padding-top: 80px;
     padding-left: 46px;
     width: calc(100vw - 46px);
+
+    .error-box {
+      text-align: center;
+      padding-bottom: 10px;
+      font-size: 12px;
+      color: theme.$main-light-3;
+    }
   }
 }
 
