fixed flex direction for keys

--- a/src/style/css/pages/listMythic.scss
+++ b/src/style/css/pages/listMythic.scss
@@ -59,6 +59,7 @@
   .keys {
     margin-top: 12px;
     display: flex;
+    flex-direction: column;
     gap: 8px;
     .item-select {
       .items {
