--- a/src/style/css/components/key.scss
+++ b/src/style/css/components/key.scss
@@ -22,12 +22,6 @@
       height: 25px;
       cursor: pointer;
 
-      &:hover {
-        .icon {
-          color: colors.$active;
-        }
-      }
-
       .icon {
         color: theme.$main-light-1;
       }
@@ -38,12 +32,20 @@
 
       .item-select {
         flex-grow: 1;
-        border-left: 1px solid theme.$main-dark-1;
 
         .select,
         .header {
           border-radius: 0 0 5px 0;
         }
+      }
+      .level-round {
+        .select,
+        .header {
+          border-radius: 0 0 5px 5px;
+        }
+      }
+      .right-border {
+        border-right: 1px solid theme.$main-dark-1;
       }
     }
   }
